--- a/First page.html
+++ b/First page.html
@@ -6,8 +6,11 @@
 <title>This is a page</title>
 </head>
 <body>
-<div>
+<nav>
+</nav>
 <img id="logo" src="images/logo.png" alt="logo" center>
+<div id="icons">
+<i id="home" class="fas fa-home"></i>
 </div>
 </body>
 
