--- a/First page.html
+++ b/First page.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="styles/style.css">
 <script src="https://kit.fontawesome.com/c296bd0381.js" crossorigin="anonymous"></script>
+<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
 <title>This is a page</title>
 </head>
 <body>
@@ -10,7 +11,13 @@
 </nav>
 <img id="logo" src="images/logo.png" alt="logo" center>
 <div id="icons">
-<i id="home" class="fas fa-home"></i>
+<button class="buttons"><a href="http://www.google.com" id="home" class="fas fa-home"></a><br><a class="buttonText">Home</a></button>
+<button class="buttons"><a href="http://www.speeleiland.nl" id="features" class="fas fa-cogs"></a><a class="buttonText">Features</a</button>
+<button class="buttons"><a href="http://www.spelletjes.nl" id="pages" class="far fa-file"></a><a class="buttonText">Pages</a</button>
+<button class="buttons"><a href="http://www.sinterklaas.nl" id="portofolio" class="fas fa-th"></a><a class="buttonText">Portofolio</a</button>
+<button class="buttons"><a href="http://www.bomberman.nl" id="blog" class="fas fa-font"></a><a class="buttonText">Blog</a</button>
+<button class="buttons"><a href="http://www.plant.nl" id="contact" class="fas fa-comment"></a><a class="buttonText">Contact</a</button>
+
 </div>
 </body>
 
