--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <nav>
+    <button class="menu"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" id="signal" class="fas fa-wifi"></a></button>
 </nav>
 <img id="logo" src="images/logo.png" alt="logo" center>
 <div id="icons">
