--- a/index.html
+++ b/index.html
@@ -8,16 +8,19 @@
 </head>
 <body>
 <nav>
+    <button class="menu"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" id="google" class="fab fa-google-plus-g"></a></button>
+    <button class="menu"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" id="facebook" class="fab fa-facebook-f"></a></button>
+    <button class="menu"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" id="twitter" class="fab fa-twitter"></a></button>
     <button class="menu"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" id="signal" class="fas fa-wifi"></a></button>
 </nav>
 <img id="logo" src="images/logo.png" alt="logo" center>
 <div id="icons">
-<button class="buttons" id="button1"><a href="index.html" id="home" class="fas fa-home"></a><br><a class="buttonText">Home</a></button>
-<button class="buttons"><a href="pages/features.html" id="features" class="fas fa-cogs"></a><a class="buttonText">Features</a</button>
-<button class="buttons"><a href="pages/pages.html" id="pages" class="far fa-file"></a><a class="buttonText">Pages</a</button>
-<button class="buttons"><a href="pages/protofolio.html" id="portofolio" class="fas fa-th"></a><a class="buttonText">Portofolio</a</button>
-<button class="buttons"><a href="pages/blog.html" id="blog" class="fas fa-font"></a><a class="buttonText">Blog</a</button>
-<button class="buttons"><a href="pages/contact.html" id="contact" class="fas fa-comment"></a><a class="buttonText">Contact</a</button>
+<button class="buttons" id="button1"><a href="index.html" id="home" class="fas fa-home"></a><br><a class="buttonText" href="index.html">Home</a></button>
+<button class="buttons"><a href="pages/features.html" id="features" class="fas fa-cogs"></a><a class="buttonText" href="pages/features.html">Features</a</button>
+<button class="buttons"><a href="pages/pages.html" id="pages" class="far fa-file"></a><a class="buttonText" href="pages/pages.html">Pages</a</button>
+<button class="buttons"><a href="pages/portofolio.html" id="portofolio" class="fas fa-th"></a><a class="buttonText" href="pages/portofolio.html">Portofolio</a</button>
+<button class="buttons"><a href="pages/blog.html" id="blog" class="fas fa-font"></a><a class="buttonText" href="pages/blog.html"><pre>  Blog</pre></a</button>
+<button class="buttons"><a href="pages/contact.html" id="contact" class="fas fa-comment"></a><a class="buttonText" href="pages/contact.html">Contact</a</button>
 
 </div>
 </body>
