changed design of other pages

--- a/pages/features.html
+++ b/pages/features.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="../styles/style.css">
 <script src="https://kit.fontawesome.com/c296bd0381.js" crossorigin="anonymous"></script>
 <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
-<title>Portofolio</title>
+<title>Features</title>
 </head>
 <body>
 <nav>
@@ -13,7 +13,7 @@
     <button class="menu"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" id="twitter" class="fab fa-twitter"></a></button>
     <button class="menu"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" id="signal" class="fas fa-wifi"></a></button>
 </nav>
-<img id="logo" src="../images/logo.png" alt="logo" center>
+<center><h1 class="name">Features</h1></center>
 <div id="icons">
 <button class="buttons" id="button1"><a href="../index.html" id="home" class="fas fa-home"></a><br><a class="buttonText" href="../index.html">Home</a></button>
 <button class="buttons"><a href="features.html" id="features" class="fas fa-cogs"></a><a class="buttonText" href="features.html">Features</a</button>
