--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </nav>
 <img id="logo" src="images/logo.png" alt="logo">
 <div id="icons">
-<button class="buttons" onclick="window.location.href ='index.html'"><i id="home" class="fas fa-home"></i><span class="buttonText">Home</span></button>
+<button class="buttons" id="button1" onclick="window.location.href ='index.html'"><i id="home" class="fas fa-home"></i><span class="buttonText">Home</span></button>
 <button class="buttons" onclick="window.location.href ='pages/features.html'"><i id="features" class="fas fa-cogs"></i><span class="buttonText">Features</span></button>
 <button class="buttons" onclick="window.location.href ='pages/pages.html'"><i id="pages" class="far fa-file"></i><span class="buttonText">Pages</span></button>
 <button class="buttons" onclick="window.location.href ='pages/portofolio.html'"><i id="portofolio" class="fas fa-th"></i><span class="buttonText">Portofolio</span></button>
